# Agent-Verification-Framework

./: .gitignore  README.md  pyproject.toml
docs/: README.md  architecture-overview.md  base-agent-design.md  contracts-and-schemas.md  decision-log.md  implementation-roadmap.md  phase-1-infrastructure.md  phase-2-infrastructure.md  phase-3-infrastructure.md  phase-4-analysis.md
scripts/: README.md  run-phase1-baseline.sh  run-phase2-integration.sh  run-phase3a-experiment.sh  run-phase3b-pilot.sh  run-phase3c-freeze.sh  run-phase3d-review.sh  run-phase4a-analysis.sh  run-phase4b-component-effects.sh  run-phase4c-trajectory-diagnostics.sh  run-phase4d-analysis-report.sh  run-phase4e-dashboard-read-model.sh
src/avf/: __init__.py  cli.py
test_data/components/: A1_B1_C1.json  A1_B1_C2.json  A1_B2_C1.json  (+5 more)
tests/: test_baseline_agent.py  test_baseline_run.py  test_bm25_retrieval.py  test_cli.py  test_contracts.py  test_embedding_retrieval.py  test_mock_services.py  test_orchestration.py  test_phase2a_storage_components.py  test_phase2g_component_fixtures.py  test_phase2h_component_aware_baseline.py  test_phase2i_artifact_qa.py  test_phase2j_integration_baseline.py  test_phase3a_experiment_matrix.py  test_phase3b_pilot_qa.py  test_phase3c_dataset_freeze.py  test_phase3d_readiness_review.py  test_phase4a_analysis.py  test_phase4b_component_effects.py  test_phase4c_trajectory_diagnostics.py  test_phase4d_failure_analysis.py  test_phase4e_dashboard_read_model.py  test_rule_based_scheduler.py  test_sqlite_memory.py  test_tracing.py  test_vector_memory.py  test_verification.py
(+73 files in other folders)
