[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-verification-framework"
version = "0.1.0"
description = "Controlled component-level evaluation framework for AI agents."
readme = "docs/README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
avf = "avf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

